# TalentFrame-flask-backend

./: .dockerignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: main.yaml  main_talentframe.yml
src/: AvatarMatch.py  CallMethods.py  FaceProcessor.py  VectorStore.py  config.py
